nobino/back-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: tv-back-svc
spec:
  selector:
    app: backend
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: backend
    name: backend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            affinity:
              podAntiAffinity:
                requiredDuringSchedulingIgnoredDuringExecution:
                - labelSelector:
                    matchExpressions:
                    - key: app
                      operator: In
                      values:
                      - backend
                  topologyKey: tvstack
            containers:
            - image: armaghantv
              imagePullPolicy: IfNotPresent
              resources:
                requests:
                  memory: "1024Mi"
                  cpu: "750m"
                limits:
                  memory: "2048Mi"
                  cpu: "1000m"
              name: backend
              ports:
              - containerPort: 8081
              volumeMounts:
              - mountPath: /usr/src
                name: nfs
            volumes:
              - name: nfs
                nfs:
                  server: 192.168.115.40
                  path: /opt/nobino/tv-back
