nobino/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tv-db-svc
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Endpoints
metadata:
  name: tv-db-svc
subsets:
  - addresses:
      - ip: 192.168.115.210
    ports:
      - port: 3306
