nobino/front-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: tv-front-svc
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 4000
      nodePort: 31080
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: frontend
    name: frontend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            affinity:
              podAntiAffinity:
                requiredDuringSchedulingIgnoredDuringExecution:
                - labelSelector:
                    matchExpressions:
                    - key: app
                      operator: In
                      values:
                      - frontend
                  topologyKey: tvstack
              podAffinity:
                requiredDuringSchedulingIgnoredDuringExecution:
                - labelSelector:
                    matchExpressions:
                    - key: app
                      operator: In
                      values:
                      - backend
                  topologyKey: tvstack
            containers:
            - image: arttvfrontend2_art-tv-project-frontend
              imagePullPolicy: IfNotPresent
              resources:
                requests:
                  memory: "512Mi"
                  cpu: "250m"
                limits:
                  memory: "1024Mi"
                  cpu: "500m"
              name: frontend
              ports:
              - containerPort: 4000
              volumeMounts:
              - mountPath: /usr/share/nginx/html
                name: nfs
            volumes:
              - name: nfs
                nfs:
                  server: 192.168.115.40
                  path: /opt/nobino/tv-front/build
